--- a/JoanneYahn_CodeChallenge4.html
+++ b/JoanneYahn_CodeChallenge4.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html class="ie8 ie_old" lang="en">
+ <!--[if IE 8]> <html class="ie8 ie_old" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title>Code Challenge 4</title>
 	  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	  <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
